# Fresher_CPP

BT1/: CMakeLists.txt  CMakePresets.json  main.cpp
BT2/: CMakeLists.txt  main  main.cpp
MOCK9/lib/: CMakeLists.txt
MOCK9/lib/src/: libClient.cpp  libClient.h  libService.cpp  libService.h
MOCK9/test/: CMakeLists.txt  main_service.cpp  main_temperature_app.cpp  main_volume_app.cpp  main_volume_app2.cpp
